--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-Package                       Version    Location
------------------------------ ---------- ------------------------------------
 absl-py                       0.9.0
 alabaster                     0.7.12
 albumentations                0.4.5
@@ -74,34 +72,20 @@ jedi                          0.15.2
 Jinja2                        2.11.2
 jsonfield                     3.1.0
 jsonschema                    3.2.0
-jupyter-client                6.1.3
-jupyter-core                  4.6.3
-Keras-Applications            1.0.8
-Keras-Preprocessing           1.1.0
 keyring                       21.2.0
 kiwisolver                    1.2.0
-labelImg                      1.8.3
-labelme                       4.5.6
 lazy-object-proxy             1.4.3
 lxml                          4.5.0
 Markdown                      3.2.1
 MarkupSafe                    1.1.1
-matplotlib                    3.2.1
 mccabe                        0.6.1
 mistune                       0.8.4
 msrest                        0.6.14
 mss                           5.0.0
 nbconvert                     5.6.1
 nbformat                      5.0.5
-networkx                      2.4
-numpy                         1.18.2
-numpydoc                      0.9.2
 oauthlib                      3.1.0
-object-detection              0.1
-opencv-contrib-python         4.2.0.34
-opencv-python                 4.2.0.34
 packaging                     20.3
-pandas                        1.0.3
 pandocfilters                 1.4.2
 paramiko                      2.7.1
 parso                         0.5.2
@@ -111,7 +95,7 @@ pexpect                       4.8.0
 pickleshare                   0.7.5
 Pillow                        7.1.2
 pinax-cli                     1.1.4
-pinax-stripe                  4.4.0      c:\users\user\documents\pinax-stripe
+pinax-stripe                  4.4.0     
 pip                           20.1
 pluggy                        0.13.1
 prompt-toolkit                3.0.5
@@ -149,8 +133,6 @@ QtPy                          1.9.0
 requests                      2.23.0
 requests-oauthlib             1.3.0
 rope                          0.16.0
-scikit-image                  0.17.2
-scipy                         1.4.1
 setuptools                    41.2.0
 six                           1.14.0
 snowballstemmer               2.0.0
@@ -167,9 +149,6 @@ spyder-kernels                1.9.0
 sqlparse                      0.3.1
 stevedore                     1.32.0
 stripe                        2.48.0
-tensorboard                   1.14.0
-tensorflow                    1.14.0
-tensorflow-estimator          1.14.0
 termcolor                     1.1.0
 testpath                      0.4.4
 tifffile                      2020.5.11
