--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,14 @@
-absl-py==0.9.0
-alabaster==0.7.12
-albumentations==0.4.5
 appdirs==1.4.3
 argon2-cffi==19.2.0
 asgiref==3.2.7
-astor==0.8.1
-astroid==2.3.3
-atomicwrites==1.3.0
-attrs==19.3.0
+astroid==2.4.1
 autopep8==1.5.2
-Babel==2.8.0
-backcall==0.1.0
-bcrypt==3.1.7
-bleach==3.1.4
-certifi==2020.4.5.1
 cffi==1.14.0
-chardet==3.0.4
 click==7.1.2
-cloudpickle==1.3.0
 colorama==0.4.3
 crayons==0.3.1
-cryptography==2.9
 cycler==0.10.0
 Cython==0.29.16
-decorator==4.4.2
-defusedxml==0.6.0
-diff-match-patch==20181111
 distlib==0.3.0
 dj-database-url==0.5.0
 Django==3.0.6
@@ -41,115 +24,36 @@ django-templated-mail==1.1.1
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.4.0
-docutils==0.16
 drf-flex-fields==0.8.0
-entrypoints==0.3
 filelock==3.0.12
-flake8==3.7.9
-gast==0.3.3
-google-pasta==0.2.0
-grpcio==1.28.1
 gunicorn==20.0.4
-helpdev==0.6.10
-idna==2.9
-imagecodecs==2020.2.18
-imageio==2.8.0
-imagesize==1.2.0
-imgaug==0.2.6
-imgviz==1.2.1
-importlib-metadata==1.6.0
-intervaltree==3.0.2
-ipykernel==5.2.1
-ipython==7.13.0
-ipython-genutils==0.2.0
 isodate==0.6.0
 isort==4.3.21
-jedi==0.15.2
-Jinja2==2.11.2
 jsonfield==3.1.0
-jsonschema==3.2.0
-jupyter-client==6.1.3
-keyring==21.2.0
+kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
-lxml==4.5.0
-Markdown==3.2.1
-MarkupSafe==1.1.1
 mccabe==0.6.1
-mistune==0.8.4
 msrest==0.6.14
-nbconvert==5.6.1
-nbformat==5.0.5
-oauthlib==3.1.0
-packaging==20.3
-paramiko==2.7.1
-parso==0.5.2
-pathtools==0.1.2
 pbr==5.4.5
-pexpect==4.8.0
-pickleshare==0.7.5
 Pillow==7.1.2
-pluggy==0.13.1
-prompt-toolkit==3.0.5
-protobuf==3.11.3
-psutil==5.7.0
 psycopg2==2.8.5
-ptyprocess==0.6.0
 pycodestyle==2.5.0
 pycparser==2.20
-pydocstyle==5.0.2
-pyflakes==2.2.0
-Pygments==2.6.1
 PyJWT==1.7.1
-pylint==2.4.4
-PyNaCl==1.3.0
+pylint==2.5.2
 pyparsing==2.4.7
-PyQt5==5.12.3
-PyQt5-sip==12.7.2
-PyQtWebEngine==5.12.1
-pyrsistent==0.16.0
 python-dateutil==2.8.1
 python-decouple==3.3
-python-jsonrpc-server==0.3.4
-python-language-server==0.31.9
 pytz==2020.1
-PyWavelets==1.1.1
-pywin32-ctypes==0.2.0
-PyYAML==5.3.1
-pyzmq==19.0.0
-QDarkStyle==2.8.1
-requests==2.23.0
-requests-oauthlib==1.3.0
-rope==0.16.0
 six==1.14.0
-snowballstemmer==2.0.0
-sortedcontainers==2.1.0
-Sphinx==3.0.1
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
 sqlparse==0.3.1
 stevedore==1.32.0
 stripe==2.48.0
-termcolor==1.1.0
-testpath==0.4.4
-tifffile==2020.5.11
 toml==0.10.0
-tornado==6.0.4
-tqdm==4.46.0
-traitlets==4.3.3
 typed-ast==1.4.1
-urllib3==1.25.8
+Unipath==1.1
 virtualenv==20.0.17
 virtualenv-clone==0.5.4
 virtualenvwrapper==4.8.4
-watchdog==0.10.2
-wcwidth==0.1.9
-webencodings==0.5.1
-Werkzeug==1.0.1
 whitenoise==5.1.0
-wrapt==1.11.2
-yapf==0.29.0
-zipp==3.1.0
+wrapt==1.12.1
