--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,27 @@
+absl-py==0.9.0
+alabaster==0.7.12
 appdirs==1.4.3
 argon2-cffi==19.2.0
 asgiref==3.2.7
+astor==0.8.1
 astroid==2.4.1
+attrs==19.3.0
 autopep8==1.5.2
+Babel==2.8.0
+backcall==0.2.0
+bleach==3.1.5
+boto3==1.14.43
+botocore==1.17.43
+certifi==2020.6.20
 cffi==1.14.0
+chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
 crayons==0.3.1
 cycler==0.10.0
 Cython==0.29.16
+decorator==4.4.2
+defusedxml==0.6.0
 distlib==0.3.0
 dj-database-url==0.5.0
 Django==3.0.6
@@ -19,41 +32,105 @@ django-extensions==2.2.9
 django-filter==2.2.0
 django-heroku==0.3.1
 django-ipware==2.1.0
-django-rest-registration==0.5.6
+django-storages==1.9.1
 django-templated-mail==1.1.1
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.4.0
+docutils==0.15.2
 drf-flex-fields==0.8.0
+entrypoints==0.3
 filelock==3.0.12
+gast==0.4.0
+google-pasta==0.2.0
+grpcio==1.31.0
 gunicorn==20.0.4
+idna==2.10
+imageio==2.9.0
+imagesize==1.2.0
+imgaug==0.4.0
+importlib-metadata==1.7.0
+ipykernel==5.3.4
+ipyparallel==6.3.0
+ipython==7.17.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
 isodate==0.6.0
 isort==4.3.21
+jedi==0.17.2
+Jinja2==2.11.2
+jmespath==0.10.0
 jsonfield==3.1.0
+jsonschema==3.2.0
 kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
+Markdown==3.2.2
+MarkupSafe==1.1.1
 mccabe==0.6.1
+mistune==0.8.4
 msrest==0.6.14
+nbconvert==5.6.1
+nbformat==5.0.7
+nose==1.3.7
+notebook==6.1.3
+packaging==20.4
+pandocfilters==1.4.2
+parso==0.7.1
 pbr==5.4.5
+pickleshare==0.7.5
 Pillow==7.1.2
+prompt-toolkit==3.0.6
+protobuf==3.12.4
 psycopg2==2.8.5
 pycodestyle==2.5.0
 pycparser==2.20
+Pygments==2.6.1
 PyJWT==1.7.1
 pylint==2.5.2
 pyparsing==2.4.7
+pyrsistent==0.16.0
 python-dateutil==2.8.1
 python-decouple==3.3
 pytz==2020.1
+PyWavelets==1.1.1
+pywin32==228
+pywinpty==0.5.7
+PyYAML==5.3.1
+pyzmq==19.0.2
+requests==2.24.0
+requests-oauthlib==1.3.0
+s3transfer==0.3.3
+Send2Trash==1.5.0
+Shapely==1.7.0
 six==1.14.0
+snowballstemmer==2.0.0
+Sphinx==3.2.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
 sqlparse==0.3.1
 stevedore==1.32.0
 stripe==2.48.0
+termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
+tifffile==2020.7.24
 toml==0.10.0
+tornado==6.0.4
+traitlets==4.3.3
 typed-ast==1.4.1
 Unipath==1.1
+urllib3==1.25.10
 virtualenv==20.0.17
 virtualenv-clone==0.5.4
 virtualenvwrapper==4.8.4
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
 whitenoise==5.1.0
+widgetsnbextension==3.5.1
 wrapt==1.12.1
+zipp==3.1.0
