--- a/requirements.txt
+++ b/requirements.txt
@@ -79,6 +79,7 @@ parso==0.7.1
 pbr==5.4.5
 pickleshare==0.7.5
 Pillow==7.1.2
+prometheus-client==0.8.0
 prompt-toolkit==3.0.6
 protobuf==3.12.4
 psycopg2==2.8.5
@@ -97,6 +98,8 @@ pywin32==228
 pywinpty==0.5.7
 PyYAML==5.3.1
 pyzmq==19.0.2
+qtconsole==4.7.5
+QtPy==1.9.0
 requests==2.24.0
 requests-oauthlib==1.3.0
 s3transfer==0.3.3
