--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ gast==0.4.0
 google-pasta==0.2.0
 grpcio==1.31.0
 gunicorn==20.0.4
+h5py==2.10.0
 idna==2.10
 imageio==2.9.0
 imagesize==1.2.0
@@ -52,6 +53,7 @@ imgaug==0.4.0
 importlib-metadata==1.7.0
 ipykernel==5.3.4
 ipyparallel==6.3.0
+ipython==7.17.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 isodate==0.6.0
@@ -92,12 +94,9 @@ pyrsistent==0.16.0
 python-dateutil==2.8.1
 python-decouple==3.3
 pytz==2020.1
-PyWavelets==1.1.1
 pywinpty==0.5.7
 PyYAML==5.3.1
 pyzmq==19.0.2
-qtconsole==4.7.5
-QtPy==1.9.0
 requests==2.24.0
 requests-oauthlib==1.3.0
 s3transfer==0.3.3
