--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ djangorestframework-simplejwt==4.4.0
 docutils==0.15.2
 dominate==2.5.2
 drf-flex-fields==0.8.0
+drf-writable-nested==0.6.1
 entrypoints==0.3
 filelock==3.0.12
 gast==0.4.0
@@ -56,10 +57,6 @@ imageio==2.9.0
 imagesize==1.2.0
 importlib-metadata==1.7.0
 imutils==0.5.3
-ipykernel==5.3.4
-ipyparallel==6.3.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
 isodate==0.6.0
 isort==4.3.21
 itsdangerous==1.1.0
@@ -79,6 +76,7 @@ mistune==0.8.4
 msrest==0.6.14
 nbconvert==5.6.1
 nbformat==5.0.7
+networkx==2.4
 nose==1.3.7
 notebook==6.1.3
 oauthlib==3.1.0
@@ -87,7 +85,6 @@ parso==0.7.1
 pbr==5.4.5
 pickleshare==0.7.5
 Pillow==7.2.0
-pinax-cli==1.1.4
 pkginfo==1.5.0.1
 prometheus-client==0.8.0
 prompt-toolkit==3.0.6
@@ -96,7 +93,6 @@ psycopg2==2.8.5
 pycodestyle==2.5.0
 pycparser==2.20
 Pygments==2.6.1
-PyJWT==1.7.1
 pylint==2.5.2
 pyparsing==2.4.7
 pyrsistent==0.16.0
@@ -105,7 +101,6 @@ python-decouple==3.3
 pytz==2020.1
 PyYAML==5.3.1
 pyzmq==19.0.2
-qtconsole==4.7.5
 readme-renderer==26.0
 requests==2.24.0
 requests-oauthlib==1.3.0
