--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
 contextlib2==0.6.0.post1
+coreapi==2.3.3
+coreschema==0.0.4
 crayons==0.3.1
 cycler==0.10.0
 Cython==0.29.16
@@ -45,6 +47,7 @@ docutils==0.15.2
 dominate==2.5.2
 drf-flex-fields==0.8.0
 drf-writable-nested==0.6.1
+drf-yasg==1.17.1
 entrypoints==0.3
 filelock==3.0.12
 gast==0.4.0
@@ -52,14 +55,14 @@ google-pasta==0.2.0
 grpcio==1.31.0
 gunicorn==20.0.4
 idna==2.10
-imagecorruptions==1.1.0
-imageio==2.9.0
-imagesize==1.2.0
 importlib-metadata==1.7.0
 imutils==0.5.3
+inflection==0.5.1
+ipywidgets==7.5.1
 isodate==0.6.0
 isort==4.3.21
 itsdangerous==1.1.0
+itypes==1.2.0
 jedi==0.17.2
 Jinja2==2.11.2
 jmespath==0.10.0
@@ -73,13 +76,10 @@ Markdown==3.2.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mistune==0.8.4
-msrest==0.6.14
 nbconvert==5.6.1
 nbformat==5.0.7
-networkx==2.4
 nose==1.3.7
 notebook==6.1.3
-oauthlib==3.1.0
 packaging==20.4
 parso==0.7.1
 pbr==5.4.5
@@ -92,20 +92,19 @@ protobuf==3.12.4
 psycopg2==2.8.5
 pycodestyle==2.5.0
 pycparser==2.20
-Pygments==2.6.1
-pylint==2.5.2
 pyparsing==2.4.7
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 python-decouple==3.3
 pytz==2020.1
-PyYAML==5.3.1
 pyzmq==19.0.2
 readme-renderer==26.0
 requests==2.24.0
 requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 rfc3986==1.4.0
+ruamel.yaml==0.16.12
+ruamel.yaml.clib==0.2.2
 s3transfer==0.3.3
 Send2Trash==1.5.0
 Shapely==1.7.0
@@ -134,6 +133,7 @@ traitlets==4.3.3
 twine==3.2.0
 typed-ast==1.4.1
 Unipath==1.1
+uritemplate==3.0.1
 urllib3==1.25.10
 virtualenv==20.0.17
 virtualenv-clone==0.5.4
