--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,18 @@ argon2-cffi==20.1.0
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
+django-cors-headers==3.2.1
 dj-database-url==0.5.0
 django-environ==0.4.5
 django-heroku==0.3.1
 django-psycopg2-extension==0.0.5
 django-storages==1.10.1
+djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
 idna==2.10
 inflection==0.5.1
 itypes==1.2.0
+gunicorn==20.0.4
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 psycopg2==2.8.6
@@ -19,6 +22,7 @@ python-environ==0.4.54
 requests==2.24.0
 ruamel.yaml==0.16.12
 ruamel.yaml.clib==0.2.2
+six==1.14.0
 stripe==2.55.0
 Unipath==1.1
 uritemplate==3.0.1
