--- a/requirements.txt
+++ b/requirements.txt
@@ -108,6 +108,7 @@ ruamel.yaml.clib==0.2.2
 s3transfer==0.3.3
 Send2Trash==1.5.0
 Shapely==1.7.0
+ShopifyAPI==8.4.1
 simplejson==3.17.2
 six==1.14.0
 sqlparse==0.3.1
