--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,8 @@ django-storages==1.9.1
 django-templated-mail==1.1.1
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
-djangorestframework-simplejwt==4.4.0
+djangorestframework-simplejwt==4.7.1
+djoser==2.1.0
 docutils==0.15.2
 dominate==2.5.2
 drf-flex-fields==0.8.0
