--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,44 @@
-argon2-cffi==20.1.0
-awscli==1.18.176
-botocore==1.19.16
-certifi==2020.6.20
-cffi==1.14.3
-chardet==3.0.4
-click==8.0.1
-click-plugins==1.1.1
-colorama==0.4.3
-cryptography==3.4.7
-defusedxml==0.7.1
-dj-database-url==0.5.0
-django-environ==0.4.5
-django-heroku==0.3.1
-django-psycopg2-extension==0.0.5
-django-rest-passwordreset==1.2.0
-django-storages==1.10.1
-django-templated-mail==1.1.1
-djangorestframework-simplejwt==4.7.1
-djoser==2.1.0
-docutils==0.15.2
-et-xmlfile==1.1.0
-Faker==8.12.0
-idna==2.10
-inflection==0.5.1
-itypes==1.2.0
-Jinja2==2.11.2
-jmespath==0.10.0
-MarkupSafe==1.1.1
-numpy==1.21.0
-oauthlib==3.1.1
-openpyxl==3.0.7
-pandas==1.3.0
-psycopg2==2.8.6
-pyactiveresource==2.2.2
-pyasn1==0.4.8
-PyJWT==2.1.0
-pyPEG2==2.15.2
-python-decouple==3.3
-python-environ==0.4.54
-python3-openid==3.2.0
-PyYAML==5.3.1
-requests==2.24.0
-requests-oauthlib==1.3.0
-rsa==4.5
-ruamel.yaml==0.16.12
-ruamel.yaml.clib==0.2.2
-s3transfer==0.3.3
-sentry-sdk==1.3.1
-shodan==1.25.0
-social-auth-app-django==4.0.0
-social-auth-core==4.1.0
-text-unidecode==1.3
-Unipath==1.1
-uritemplate==3.0.1
-urllib3==1.25.11
-whitenoise==5.2.0
-XlsxWriter==3.0.1
+absl-py>=0.15.0
+appdirs>=1.4.3
+asgiref>=3.4.1
+autopep8>=1.5.2
+azure-msi-mssql-django>=1.6
+certifi>=2021.10.8
+cffi>=1.15.0
+charset-normalizer>=2.0.7
+coreapi>=2.3.3
+cryptography>=35.0.0
+cycler>=0.10.0
+Cython>=0.29.16
+distlib>=0.3.0
+Django>=3.2.8
+django-cors-headers>=3.2.1
+djangorestframework>=3.11.0
+drf-flex-fields>=0.8.0
+drf-writable-nested>=0.6.1
+drf-yasg>=1.17.1
+filelock>=3.0.12
+idna>=3.3
+jsonfield>=3.1.0
+msal>=1.15.0
+ortools>=9.1.9490
+pbr>=5.4.5
+protobuf>=3.19.0
+pycodestyle>=2.5.0
+pycparser>=2.20
+PyJWT>=2.3.0
+pyodbc>=4.0.32
+pyparsing>=2.4.7
+python-dateutil>=2.8.1
+python-decouple>=3.5
+pytz>=2020.1
+requests>=2.26.0
+sentry-sdk>=1.4.3
+six>=1.14.0
+sqlparse>=0.3.1
+stevedore>=1.32.0
+Unipath>=1.1
+urllib3>=1.26.7
+virtualenv>=20.0.17
+virtualenv-clone>=0.5.4
+virtualenvwrapper>=4.8.4
